Updated background image

--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@ h1 {
 }
 
 body{
-    background-image: url("papyrus.png");
+    background-image: url("/images/papyrus.png");
     /* background-color: #f8fffe; */
 }
 
